2015-07-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSLock.h:
	* Source/NSLock.m:
	Add extension method -isLockedByCurrentThread for debug purposes.
	Also make description report the OS thread id of the thread which
	holds the lock (if any).

2015-07-08 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSConfig.h.in
	On NetBSD, undefine the system __weak first.

2015-07-03 Niels Grewe <niels.grewe@halbordnung.de>

        * Tests/base/NSXMLParser/ParseData/namespaced-attributes.xml:
        * Tests/base/NSXMLParser/ParseData/namespaced-attributes.result:
        Test case for attribute namespace prefixes.

2015-07-03 Niels Grewe <niels.grewe@halbordnung.de>

        * Source/Additions/GSXML.m: Fix reporting namespace prefixes
        of attributes when using the SAX2 parser.

2015-06-30  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac:
        * configure:
        * Headers/GNUstepBase/config.h.in:
        Add test for pthread_mutex_t.__data.__owner
        Update various tests to silence autoconf warnings.
	* Source/NSLock.m: If available, use pthread_mutex_t.__data.__owner
	to print the owning thread ID in the -description method.

2015-06-26 Riccardo Mottola <rm@gnu.org>

	* Source/NSMethodSignature.m
	* Source/cifframe.m
	Minor include fixes to avoid malloc.h warnings on OpenBSD.

	* Source/NSScanner.m
	Remove set but unused variable.

2015-06-22  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/Additions.h:
        * Headers/GNUstepBase/GSConfig.h.in:
        * Headers/GNUstepBase/GSVersionMacros.h:
        Minor tweaks to build and avoid warnings in Yosemite

2015-06-14 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSData.h
	* Source/NSData.m
	base64EncodedDataWithOptions, base64EncodedStringWithOptions:
	first implementation

2015-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: be strict about '=' padding only occurring at end
	of base64 encoded data.
